# assay

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.streamlit/: config.toml
assay/: __init__.py  cli.py  pipeline.py  provenance.py
assay/commodities/: __init__.py  monetary.py  pipeline.py  realprice.py  registry.py  report.py
assay/data/: __init__.py  analysts.py  edgar.py  fred.py  prices.py  sample.py
assay/engine/: __init__.py  report.py  triangulate.py  valuability.py
assay/models/: __init__.py  asset_value.py  base.py  dcf.py  earnings_power.py
assay/narrate/: __init__.py  llm.py  narrate.py
assay/ui/: __init__.py  app.py  launch.py
data/: README.md
docs/: DESIGN.md
docs/images/: README.md
tests/: test_commodities.py  test_dcf.py  test_edgar.py  test_fred.py  test_growth.py  test_methods.py  test_monetary.py  test_pipeline.py  test_prices.py  test_provenance.py  test_realprice.py  test_report_grounding.py
